--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,3 @@
-version: "3"
 services:
   go-application:
     build:
@@ -28,3 +27,46 @@ services:
     image: nodejs-application
     ports:
       - "83:5000"
+  prometheus:
+    image: prom/prometheus
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - 9090:9090
+  grafana:
+    image: grafana/grafana
+    container_name: grafana
+    volumes:
+      - grafana_data:/var/lib/grafana
+    ports:
+      - "3000:3000"
+  wordpress:
+    depends_on:
+      - mysql
+    image: wordpress
+    container_name: wordpress
+    restart: unless-stopped
+    environment:
+      WORDPRESS_DB_HOST: "mysql"
+      WORDPRESS_DB_USER: "wp"  
+      WORDPRESS_DB_PASSWORD: "Wp123*"
+      WORDPRESS_DB_NAME: "wordpress"
+    ports:
+      - 8080:80
+    volumes:
+      - wordpress:/var/www/html
+  mysql:
+    image: mysql:5.7
+    restart: always
+    command: '--default-authentication-plugin=mysql_native_password'
+    environment:
+      - MYSQL_ROOT_PASSWORD=Wp123*
+      - MYSQL_DATABASE=wordpress
+      - MYSQL_USER=wp
+      - MYSQL_PASSWORD=Wp123*
+    volumes:
+      - mysql-data:/var/lib/mysql  
+volumes:
+  grafana_data:
+  wordpress:
+  mysql-data:
