--- a/go-application/dockerfile
+++ b/go-application/dockerfile
@@ -1,30 +1,17 @@
-FROM golang:1.23rc1-alpine3.20 as builder
+FROM golang:1.22.5 AS build
 
-# installing git
-RUN apk update && apk upgrade && \
-    apk add --no-cache bash git openssh
+WORKDIR /app
 
+COPY . .
 
-# setting working directory
-WORKDIR /go/src/app
+RUN go mod download
 
-RUN go mod init app
-# installing dependencies
-RUN go get github.com/prometheus/client_golang/prometheus
-RUN go get github.com/prometheus/client_golang/prometheus/promauto
-RUN go get github.com/prometheus/client_golang/prometheus/promhttp
+RUN CGO_ENABLED=0 go build -o serv
 
-COPY / /go/src/app/
-RUN go build -o myapp
+FROM gcr.io/distroless/static-debian12:latest-amd64
 
-FROM alpine:3.10
-
-RUN apk update && apk upgrade && \
-    apk add --no-cache openssh curl ca-certificates
-
-WORKDIR /go/src/app
-COPY --from=builder /go/src/app/myapp /go/src/app/myapp
+COPY --from=build /app/serv .
 
 EXPOSE 5000
 
-CMD ["./myapp"]
+CMD ["./serv"]
